force-app/main/default/objects/Google_API_User_Tracking__c/Google_API_User_Tracking__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Google API User Tracking</label>
</CustomObject>