force-app/main/default/objects/Google_API_User_Tracking__c/fields/Dashboard_Access_Roles__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Access_Roles__c</fullName>
    <description>User with Dashboard Access</description>
    <label>Dashboard Access Roles</label>
    <type>TextArea</type>
</CustomField>