force-app/main/default/objects/Google_API_User_Tracking__c/fields/Direction_API_Access_Roles__c.field-meta.xml
<CustomField>
    <fullName>Direction_API_Access_Roles__c</fullName>
    <description>User with Direction API Access</description>
    <label>Direction API Access Roles</label>
    <type>TextArea</type>
</CustomField>