force-app/main/default/objects/Google_API_User_Tracking__c/fields/Haversine_Access_Roles__c.field-meta.xml
<CustomField>
    <fullName>Haversine_Access_Roles__c</fullName>
    <description>User with Haversine Formula Access</description>
    <label>Haversine Access Roles</label>
    <type>TextArea</type>
</CustomField>